--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index">Food Groups</a>
+          <a class="navbar-brand" href="/index">FoodGroupr</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -59,7 +59,9 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Time to eat!</h1>
+        <br><br>
+      
+        <h1 align=center>Time to eat!</h1>
       </div>
       
     <div id="map-canvas" class="col-md-6"></div>
