Updates for MVP

--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -31,7 +31,7 @@
   <body>
 
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -58,7 +58,7 @@
         <br><br>
         <h1 align="center">Welcome to FoodGroupr!</h1>
  
-        <p align="center">Where do you want to explore edibles today?</p>
+        <p align="center">Where do you want to explore today?</p>
  
         <br>
  
@@ -67,7 +67,7 @@
           <label for="originInput">Let's Eat At:</label>
           <input type="text" name="origin" class="form-control" id="originInput" placeholder="e.g. San Francisco, CA">
         </div>
-            <button type="submit" name="query" class="btn btn-large btn-success" onclick="testfunction()">Submit</button>
+            <button type="submit" name="query" class="btn btn-large btn-success">Submit</button>
         </form>
         
         
