--- a/app/templates/newresults.html
+++ b/app/templates/newresults.html
@@ -97,13 +97,14 @@
                   </div>
                 </div>
                 <div class="panel-footer">
-                  <small> Great For:...</small>
+                  <small> {{ c_info[0]['Description'] }} </small>
                 </div>
               </div>
               
               <br>
               
-              <div class="panel panel-default">
+              
+              <div class="panel panel-default" id="card2">
                 <div class="panel-heading clearfix">
                   <h3 class="panel-title pull-left">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
@@ -121,13 +122,13 @@
                   </div>
                 </div>
                 <div class="panel-footer">
-                  <small> Card footer...</small>
+                  <small> {{ c_info[1]['Description'] }} </small>
                 </div>
               </div>
               
               <br>
               
-              <div class="panel panel-default">
+              <div class="panel panel-default" id="card3">
                 <div class="panel-heading clearfix">
                   <h3 class="panel-title pull-left">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
@@ -145,9 +146,10 @@
                   </div>
                 </div>
                 <div class="panel-footer">
-                  <small> Card footer...</small>
+                  <small> {{ c_info[2]['Description'] }} </small>
                 </div>
               </div>
+
               
             </div>
           </div>
@@ -161,6 +163,21 @@
     <script type="text/javascript"
         src="http://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false">
     </script>
+    
+    <!-- Hiding and showing content    -->
+    <script>
+        function hide_cards() {
+        
+            if ({{ncluster}} < 2) {
+                $("#card2").remove();
+            }
+            if ({{ncluster}} < 3) {
+                $("#card3").remove();
+            }
+        }
+        window.onload = hide_cards
+    </script>
+    
     <script>    
     function init_map() {
         
