--- a/app/templates/results1.html
+++ b/app/templates/results1.html
@@ -52,6 +52,7 @@
     <!--the website -->
       <div class="container">
       <br><br>
+
       <div class="row row-centered">
         <form role="form" action="/foodgroups" onsubmit='show_loading()' method="GET">
         <div class="form-group col-sm-10">
@@ -82,10 +83,11 @@
                     </a>
                   </h3>
                   
-                    <a class="btn btn-success pull-right" href="#">
-                        <i class="fa fa-check"></i>
-                        Get Directions
-                    </a>
+                    <form action="http://maps.google.com/maps" method="get" target="_blank">
+                    <input type="hidden" name="saddr" value="{{user_lat,user_long}}"/>
+                    <input type="hidden" name="daddr" value="{{c_info[0]['center'][0],c_info[0]['center'][1]}}"/>
+                    <input type="submit" class="btn btn-success pull-right" value="Get directions" />
+                    </form>
                   
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in">
@@ -107,7 +109,6 @@
                   </div>
                 </div>
               </div>
-              <br>
 
               
             </div>
