Update to make botton 3 work

--- a/app/templates/results3.html
+++ b/app/templates/results3.html
@@ -151,7 +151,7 @@
               <div class="panel panel-default" id="card2">
                 <div class="panel-heading clearfix">
                   <h3 class="panel-title pull-left">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                       Or {{ c_info[2]["name"] }} &raquo
                     </a>
                   </h3>
@@ -161,7 +161,7 @@
                     <input type="submit" class="btn btn-success pull-right" value="Get directions" />
                     </form>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse">
+                <div id="collapseThree" class="panel-collapse collapse">
                   <div class="panel-body">
                    <p> {{ c_info[2]['Description'] }} </p>
                   </div>
