--- a/app/templates/results3.html
+++ b/app/templates/results3.html
@@ -271,7 +271,7 @@
 
             var this_marker = new google.maps.Marker({
                 position: latlong,
-                icon: getMakerImage(thisID+1)
+                icon: getMakerImage(thisID)
                 })
 
             this_marker.setMap(this_map);   
