--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -39,12 +39,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">FoodGroupr</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
+            <li><a href="/blog">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -67,7 +69,7 @@
           <label for="originInput"></label>
           <input type="text" name="origin" class="form-control" id="originInput" placeholder="e.g. San Francisco, CA">
         </div>
-            <button type="submit" name="query" class="btn btn-large btn-success">Submit</button>
+            <button type="submit" name="keychain" value="0" class="btn btn-large btn-success">Submit</button>
         </form>
         
         
