--- a/app/templates/chord.html
+++ b/app/templates/chord.html
@@ -71,7 +71,7 @@ display: none;
 <br><br>
     <div class="row row-centered">
  
-    <h1>September 19th, 2014 - Restaurant Co-occurrence</h1>
+    <h1>September 19th, 2014 - The Chinese restaurant paradox</h1>
     <br>
     <p> If you and your friend wanted dinner tonight but couldn't agree on what to eat
     what are your chances you could find a neighborhood to visit where you could find both
