--- a/app/templates/blogsplash.html
+++ b/app/templates/blogsplash.html
@@ -48,7 +48,7 @@
 <div class="container">
 <br><br>
     <div class="row row-centered">
- 
+    <h1> FoodGroupr Blog: </h1>
  
     <h1><a href="chord.html">September 19th, 2014 - The Chinese restaurant paradox</a></h1>
     <br>
