test of link to post

--- a/app/templates/blogsplash.html
+++ b/app/templates/blogsplash.html
@@ -50,7 +50,7 @@
     <div class="row row-centered">
     <h1> FoodGroupr Blog: </h1>
  
-    <h1><a href="chord.html">September 19th, 2014 - The Chinese restaurant paradox</a></h1>
+    <h1><a href="./chord.html">September 19th, 2014 - The Chinese restaurant paradox</a></h1>
     <br>
     <p> If you and your friend wanted dinner tonight but couldn't agree on what to eat
     what are your chances you could find a neighborhood to visit where you could find both
