--- a/app/templates/chord.html
+++ b/app/templates/chord.html
@@ -178,8 +178,7 @@ display: none;
             .data(layout.groups)
             .enter().append("g")
             .attr("class", "group")
-            .on("mouseover", mouseover)
-            .on("mouseout",mouseover);
+            .on("mouseover", mouseover);
 
      
         // Add a mouseover title.
