--- a/app/templates/blogsplash.html
+++ b/app/templates/blogsplash.html
@@ -37,9 +37,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/blog">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
