--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -60,7 +60,7 @@
         <div class=well>
         <h1 align="center">Welcome to FoodGroupr!</h1>
  
-        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="476" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" align="center"></iframe>
 
 
     <!-- Bootstrap core JavaScript
