more work on format

--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -61,7 +61,9 @@
         <h1 align="center">Welcome to FoodGroupr!</h1>
  
         <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" align="center"></iframe>
-
+      </div>
+    </div>
+  </diva>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
