more work on format

--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -58,9 +58,12 @@
      <div class="hero-unit">
         <br><br>
         <div class=well>
-        <h1 align="center">Welcome to FoodGroupr!</h1>
+        <h1 align="center">Learn a bit more about FoodGroupr!</h1>
+        <br>
+        <div class="row row-centered">
  
-        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" align="center"></iframe>
+        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" class="col-sm-12"></iframe>
+      </div>
       </div>
     </div>
   </diva>
