more work on format

--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -62,7 +62,7 @@
         <br>
         <div class="row row-centered">
  
-        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" class="col-sm-6"></iframe>
+        <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" class="col-sm-6 col-centered"></iframe>
       </div>
       </div>
     </div>
