more work on format

--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -61,8 +61,9 @@
         <h1 align="center">Learn a bit more about FoodGroupr!</h1>
         <br>
         <div class="row row-centered">
- 
+        <div class="col-sm-3"></div>
         <iframe src="//www.slideshare.net/slideshow/embed_code/39443290" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" class="col-sm-6 col-centered"></iframe>
+        <div class="col-sm-3"></div>
       </div>
       </div>
     </div>
